--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="label_login">Prijava</string>
     <string name="label_university_website">vvg.hr</string>
     <string name="url_university_website">https://www.vvg.hr</string>
+    <string name="address">Address</string>
+    <string name="name">Name</string>
+    <string name="surname">Surname</string>
 </resources>
